--- a/admin/src/layouts/panelLayout/panelLayout.module.scss
+++ b/admin/src/layouts/panelLayout/panelLayout.module.scss
@@ -3,6 +3,6 @@
   grid-template-columns: 2fr 7fr;
   gap: 20px;
   .outletWrapper {
-    padding: 20px;
+    padding: 20px 0;
   }
 }
