--- a/admin/src/pages/dashboard/dashboard.module.scss
+++ b/admin/src/pages/dashboard/dashboard.module.scss
@@ -1,10 +1,14 @@
 @import "styles/variables";
 @import "styles/mixins.scss";
 
-
+.dashboard{
+  @include container;
+}
 .dashboardTables {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr 1fr ;
+  gap: 12px;
+  padding-right: 20px;
   margin-top: 40px;
 }
 
